Add scripts for deleting retweets and replies, update workflows
- Added `deleteRetweets.js` script to delete retweets older than a specified threshold.
- Added `deleteReplies.js` script to delete replies older than a specified threshold.
- Updated `package.json` with new scripts:
  - `retweets`: "node deleteRetweets.js"
  - `replies`: "node deleteReplies.js"
- Created new GitHub Actions workflows:
  - `deleteRetweets.yml` to run `yarn retweets` daily.
  - `deleteReplies.yml` to run `yarn replies` daily.
- Ensured environment variables are correctly referenced in the workflows for API authentication.
- Improved automated cleaning of Twitter account by including retweets and replies in the deletion process.

--- a/.github/workflows/deleteRetweets.yml
+++ b/.github/workflows/deleteRetweets.yml
@@ -1,6 +1,7 @@
 name: Delete old retweets
 
 on:
+  workflow_dispatch:  # Allows manual triggering of the workflow
   schedule:
     - cron: '0 0 * * *'  # Runs daily at midnight UTC
 
@@ -14,10 +15,9 @@ jobs:
         with:
           node-version: '20'
       - run: yarn install
-      - run: node deleteRetweets.js
+      - run: yarn retweets
         env:
           TWITTER_KEY: ${{ secrets.TWITTER_KEY }}
           TWITTER_SECRET: ${{ secrets.TWITTER_SECRET }}
           TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
-          TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-          DELETE_AFTER_DAYS: ${{ secrets.DELETE_AFTER_DAYS }}
+          T
