--- a/.github/workflows/deleteReplies.yml
+++ b/.github/workflows/deleteReplies.yml
@@ -1,6 +1,7 @@
 name: Delete old replies
 
 on:
+  workflow_dispatch:  # Allows manual triggering of the workflow
   schedule:
     - cron: '0 0 * * *'  # Runs daily at midnight UTC
 
@@ -14,7 +15,7 @@ jobs:
         with:
           node-version: '20'
       - run: yarn install
-      - run: node deleteReplies.js
+      - run: yarn replies
         env:
           TWITTER_KEY: ${{ secrets.TWITTER_KEY }}
           TWITTER_SECRET: ${{ secrets.TWITTER_SECRET }}
