--- a/.github/workflows/deleteRetweets.yml
+++ b/.github/workflows/deleteRetweets.yml
@@ -20,4 +20,5 @@ jobs:
           TWITTER_KEY: ${{ secrets.TWITTER_KEY }}
           TWITTER_SECRET: ${{ secrets.TWITTER_SECRET }}
           TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
-          T
+          TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+          DELETE_AFTER_DAYS: ${{ secrets.DELETE_AFTER_DAYS }}
