--- a/.github/workflows/deleteRetweets.yml
+++ b/.github/workflows/deleteRetweets.yml
@@ -1,4 +1,4 @@
-name: Delete old retweets
+name: Delete old retweets (fixed)
 
 on:
   workflow_dispatch:  # Allows manual triggering of the workflow
